# deviceUtilitiesApp

./: AndroidManifest.xml  CMakeLists.txt  Main.qml  main.cpp
android/src/receiver/: brdReceiver.java  mainReceiver.java
